# streamlit-deck

./: AGENTS.md  README.md  app.py  extract_dock_icons.py  pyproject.toml
.streamlit/: config.toml
scripts/: example_script.sh
src/backend/: config.py
src/streamlit_deck/: __init__.py  cli.py  main.py
src/streamlit_deck/backend/: __init__.py  apps.py  config.py  executor.py
src/streamlit_deck/core/: __init__.py
src/streamlit_deck/core/backend/: __init__.py  base_executor.py  config.py
src/streamlit_deck/core/ui/: __init__.py  components.py  dock_viewer.py  editor.py  grid.py  sidebar.py  windows.py
src/streamlit_deck/platform/: __init__.py
src/streamlit_deck/platform/base/: __init__.py  apps.py  executor.py  mappings.py
src/streamlit_deck/platform/linux/: __init__.py  apps.py  executor.py  mappings.py
src/streamlit_deck/platform/macos/: __init__.py  apps.py  executor.py  mappings.py
src/streamlit_deck/shared/: __init__.py  app_utils.py  hotkey_utils.py  state_utils.py  ui_utils.py
src/streamlit_deck/ui/: __init__.py
