[project.scripts]
streamlit-deck = "streamlit_deck.cli:run"

[project]
name = "streamlit-deck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pynput>=1.8.1",
    "streamlit>=1.54.0",
    "Pillow>=10.0.0",
    "st-click-detector>=0.1.3",
]
